--- a/lm-journal/package.json
+++ b/lm-journal/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lm-journal",
+  "name": "athena",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
@@ -22,7 +23,10 @@
     "lucide-react": "^0.512.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hotkeys-hook": "^5.1.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.8"
   },
