working production build of journal app! go backend is a little messy, spawning of llama.cpp is clunky, lots of messy go code (thanks cursor) and core app functionality is up and running

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,9 @@ dist
 dist-ssr
 *.local
 
+temp/
+lm-journal/src-tauri/athena-be/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
